--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,15 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
-body{
+body {
   height: 100vh;
   background: #161513;
   color: white;
-  font-family: 'outfit';
+  font-family: "outfit";
+}
+
+.body {
+  position: absolute;
+  height: 100%;
 }
