--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -5,7 +5,6 @@
   justify-content: center;
   gap: 80px;
   margin: 80px 170px;
-
 }
 
 .contact-title {
@@ -27,6 +26,8 @@
   z-index: -1;
   max-width: 100%;
   height: auto;
+  left: 55%;
+  top: -1px;
 }
 
 .contact-section {
@@ -96,7 +97,7 @@
   border: none;
   color: #fff;
   font-size: 16px;
-  width: 100%;
+  width: 95%;
 }
 
 .contact-right textarea {
@@ -181,6 +182,12 @@
   .contact {
     gap: 40px;
     margin: 30px 20px;
+  }
+  .contact-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
   }
 
   .contact-title h1 {
