--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -63,11 +63,12 @@
 
 @media(max-width:768px){
     .hero img{
-        margin-top: 120px;
-        width: 260px;
+        margin-top: 40px;
+        width: 280px;
+        height: 280px;
     }
     .hero h1{
-        margin-top: 50px;
+        margin-top: 40px;
         width: 70%;
         font-size: 50px;
     }
